force-app/main/default/objects/Company__c/fields/Company_Code__c.field-meta.xml
<CustomField>
    <fullName>Company_Code__c</fullName>
    <description>Company code</description>
    <label>Company Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yogiyo</fullName>
            </value>
            <value>
                <fullName>DH_AU</fullName>
            </value>
            <value>
                <fullName>Turtle</fullName>
            </value>
            <value>
                <fullName>DE</fullName>
            </value>
            <value>
                <fullName>TL_QT</fullName>
            </value>
            <value>
                <fullName>TL_SA</fullName>
            </value>
            <value>
                <fullName>TL_LB</fullName>
            </value>
            <value>
                <fullName>TL_OM</fullName>
            </value>
            <value>
                <fullName>TL_AE</fullName>
            </value>
            <value>
                <fullName>TL_BH</fullName>
            </value>
            <value>
                <fullName>TL_KW</fullName>
            </value>
            <value>
                <fullName>Talabat</fullName>
            </value>
            <value>
                <fullName>TL_JO</fullName>
            </value>
            <value>
                <fullName>SE</fullName>
            </value>
            <value>
                <fullName>FI</fullName>
            </value>
            <value>
                <fullName>AT</fullName>
            </value>
            <value>
                <fullName>UK</fullName>
            </value>
            <value>
                <fullName>CD</fullName>
            </value>
            <value>
                <fullName>PY</fullName>
            </value>
            <value>
                <fullName>FP</fullName>
            </value>
            <value>
                <fullName>CZ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>