force-app/main/default/objects/Company__c/fields/Entity_Head__c.field-meta.xml
<CustomField>
    <fullName>Entity_Head__c</fullName>
    <label>Entity Head</label>
    <type>TextArea</type>
</CustomField>