force-app/main/default/objects/Company__c/fields/Entity_Name__c.field-meta.xml
<CustomField>
    <fullName>Entity_Name__c</fullName>
    <label>Entity Name</label>
    <type>TextArea</type>
</CustomField>