force-app/main/default/objects/Company__c/fields/Footer_Name__c.field-meta.xml
<CustomField>
    <fullName>Footer_Name__c</fullName>
    <label>Footer Name</label>
    <type>TextArea</type>
</CustomField>