force-app/main/default/objects/Company__c/fields/Header_Name__c.field-meta.xml
<CustomField>
    <fullName>Header_Name__c</fullName>
    <label>Header Name</label>
    <type>TextArea</type>
</CustomField>